Update Api & Fix some bugs
